Updated Makefile & Readme
to create consistency across the repos this team manages.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-AWS_PROFILE=mojo-shared-services-cli
+export AWS_PROFILE=mojo-shared-services-cli
+
+
+export TF_VAR_github_token=${MOJ_github_token}
+export TF_VAR_github_owner=ministryofjustice
+
+export ENV=github
