--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -22,7 +22,8 @@ jobs:
         shell: bash
     env:
         ENV: "github"
-        TF_VAR_github_token: ${{ secrets.TECH_SERVICES_GITHUB_TOKEN }}
+        TF_VAR_github_token: ${{ secrets.TECH_SERVICES_JIRA_TOKEN }}
+        TF_VAR_github_email: ${{ secrets.TECH_SERVICES_JIRA_EMAIL }}
         TF_VAR_github_owner: "ministryofjustice"
 
     steps:
