--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -22,7 +22,7 @@ jobs:
         shell: bash
     env:
         ENV: "github"
-        TF_VAR_github_token: ${{ secrets.TECH_SERVICES_GITHUB_TOKEN }}
+        TF_VAR_github_token: ${{ secrets.GITHUB_TOKEN }}
         TF_VAR_github_owner: "ministryofjustice"
 
     steps:
